--- a/src/pages/Bricks/style.css
+++ b/src/pages/Bricks/style.css
@@ -80,5 +80,5 @@ h4.title {
     max-width:100%;
 }
 .filter-cols{
-    padding:40px;
+    padding:0 20px 20px 20px;
 }
